# utilities

./: .gitignore  README.md  create_todo_list.py  download_youtube_video.py  generate_password.py  generate_qr_code.py  password_protect_script.py  shutdown_after_download.py  spread_to_odds.py  text_to_speech.py
MongoDB/: README.md
agents/: Dockerfile  compose.yaml  ollama_client.py  requirements.txt  research_agent.py  web_api.py  web_search.py
asr/: Dockerfile  README.md  app.py  requirements.txt
asr-cpu/: Dockerfile  README.md  audio_recorder.py  project.toml  pyproject.toml  requirements.txt  setup.sh  transcriber_transformers.py  transcriber_vllm.py
audio_transcription/: Dockerfile.cpu  Dockerfile.gpu  README.md  app.py  build.sh  docker-compose.yaml  download_model.sh  model_download.py  requirements.txt  run.sh  run_fastrtc.sh  streamlit_app.py  transcribe.ipynb  transcribe.py
chess_tutor/: README.md  app.py  requirements.txt  tutor.py  tutor_ollama.py
chrome_extension/: README.md  app.py  test_website.html
code_assist/: README.md
enhanced_todo/: ToDoApp.jsx  test_todo_list.py  todo.py
flashcard_game/: game.py  game_with_UI.py  multiplication_game.py  multiplication_leaderboard.json
gemini/: README.md  list_models.py  test.py
granite-speech-asr/: Dockerfile  README.md  api_server.py  docker-compose.yaml  model_download.py  requirements.txt  transcriber_transformers.py
grpc/: README.md  client.py  pyproject.toml  service.proto  service_pb2.py  taskfile.yaml
huggingface_courses/: README.md
kubernetes/: README.md
mise/: README.md
(+100 files in other folders)
